# vector-editor-cli

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
database/: shapes.json
src/vector_editor/application/: __init__.py
src/vector_editor/application/services/: __init__.py  shape_service.py
src/vector_editor/cli/: __init__.py  app.py  formatting.py
src/vector_editor/config/: __init__.py  config.py
src/vector_editor/domain/: __init__.py  placed_shape.py
src/vector_editor/domain/definitions/: __init__.py  base.py  circle.py  ellipse.py  line.py  point.py  rectangle.py  square.py
src/vector_editor/domain/entities/: __init__.py  circle.py  line.py  point.py  shape.py  square.py
src/vector_editor/domain/geometry/: __init__.py  base.py  circle.py  ellipse.py  line.py  point.py  rectangle.py  square.py
src/vector_editor/domain/interfaces/: __init__.py  repository.py
src/vector_editor/domain/primitives/: __init__.py  coordinates.py  transform.py
src/vector_editor/infrastructure/: __init__.py  serialization.py
src/vector_editor/infrastructure/repositories/: __init__.py  memory_repository.py
src/vector_editor/logger/: __init__.py  decorators.py  enums.py  handlers.py  interfaces.py  manager.py  processors.py  renderers.py
src/vector_editor/utils/: __init__.py  metaclasses.py
tests/unit/cli/: test_cli.py
tests/unit/services/: test_shape_service.py
