[project]
name = "vector-editor"
version = "0.1.0"
description = "Simple vector editor"
readme = "README.md"
authors = [
    { name = "script-logic", email = "dev.scriptlogic@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.0",
    "orjson>=3.11.7",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.21",
    "ruff>=0.4.8",
    "pre-commit>=4.5.1",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

include = ["vector_editor*"]
[project.scripts]
vector-editor = "main:main"

[tool.ruff]
src = ["src"]
target-version = "py314"
line-length = 79
exclude = ["__pycache__/", ".git/", "*.pyc", "build/", "dist/"]
format.indent-style = "space"
format.skip-magic-trailing-comma = false
format.quote-style = "double"
preview = true

[tool.ruff.lint]
ignore = ["RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["vector_editor"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: unit tests",
]

[tool.coverage.run]
source = ["vector_editor"]
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/logger/*",
    "*/utils/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
